objects/pse__Billing_Queue__c.object
<CustomObject>
    <fields>
        <fullName>pse__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>pse__Budget__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Business_Record__c</fullName>
        <formula>pse__Budget__r.Name +
pse__Expense__r.Name +
pse__Milestone__r.Name + 
pse__Miscellaneous_Adjustment__r.Name +
pse__Timecard__r.pse__Timecard_Header__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Miscellaneous_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Adjustment</label>
        <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Timecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard</label>
        <referenceTo>pse__Timecard__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Billing Queues</relationshipLabel>
        <relationshipName>Billing_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Queue</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BQ-{000000}</displayFormat>
        <label>Billing Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>